examples/test/testpolicy18884.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18884
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key17: value1
      key16: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value46
      podSelector:
        matchLabels:
          key7: value12
          key20: value13
